Task2 with templates was added

--- a/Tasks/Task2/MelnikAlexander/CMakeLists.txt
+++ b/Tasks/Task2/MelnikAlexander/CMakeLists.txt
@@ -3,6 +3,6 @@ project(MatrixLib)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp matrix_lib.cpp)
+set(SOURCE_FILES main.cpp)
 
 add_executable(MatrixLib ${SOURCE_FILES})
